deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cc-leaderboard
  labels:
    app: cc-leaderboard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: cc-leaderboard
